<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addStory"
        android:title="@string/add_story_menu"
        android:icon="@drawable/ic_outline_add_photo_alternate_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/language"
        android:title="@string/language_menu"
        android:icon="@drawable/ic_baseline_language_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/maps"
        android:title="@string/map_menu"
        android:icon="@drawable/ic_baseline_map_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout_menu"
        android:icon="@drawable/ic_baseline_logout_24"
        app:showAsAction="always"/>

</menu>